--- a/Mercury/src/main/webapp/login.html
+++ b/Mercury/src/main/webapp/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="absoluteCenteredDiv">
-        <form action="index.html" method="post">
+        <form action="ServletLogin" method="post">
             <div class="box">
                 <h1>Login Form</h1>
                 <div id="error">
