--- a/Mercury/src/main/webapp/login.html
+++ b/Mercury/src/main/webapp/login.html
@@ -20,6 +20,12 @@
                 <input class="button" value="Login" type="submit">
             </div>
         </form>
+<br>
+<footer>
+<form action="http://localhost:8080/Mercury">
+<input type="submit" value="HOME">
+</form>
+</footer>
     </div>        
 </body>
 </html>
